# tenzin

./: Cargo.toml  README.md  config.toml.example
src/: command.rs  config.rs  lib.rs  main.rs  payload.rs  server.rs  student.rs
src/mail/: mod.rs  receive.rs  send.rs  worker.rs
templates/: reset.html  reset_post.html
tests/students/1/: .tenzin
tests/students/233/: .tenzin
