[package]
name = "tenzin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
charset = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
async-imap = { version = "0.6", default_features = false, features = ["runtime-tokio"] }
async-native-tls = { version = "0.4", default_features = false, features = ["runtime-tokio"] }
serde = { version = "1", features = ["derive"] }
toml = "0.5"
tracing = "0.1"
