[package]
name = "tenzin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tz-server"
path = "src/bin/main.rs"

[[bin]]
name = "tz-keygen"
path = "src/bin/keygen.rs"

[dependencies]
anyhow = "1"
askama = "0.11"
async-imap = { version = "0.6", default_features = false, features = ["runtime-tokio"] }
async-native-tls = { version = "0.4", default_features = false, features = ["runtime-tokio"] }
axum = "0.5"
base64-url = "1.4"
bincode = "1.3"
charset = "0.1"
chrono = "0.4"
ed25519-zebra = "3"
futures = "0.3"
lettre = { version = "0.10", features = ["tokio1-native-tls"] }
once_cell = "1"
parking_lot = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
urlencoding = "2.1"
walkdir = "2.3"
validator = "0.16"
